transmits values to another component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-nueva-transferencia></app-nueva-transferencia>
+<app-nueva-transferencia (enviarDatos)="transferir($event)"></app-nueva-transferencia>
+
+<p>Valor: <strong>{{ transferencia.valor }}</strong> </p>
+<p>Destino: <strong>{{ transferencia.destino }}</strong> </p>
