being able to iterate the trasactions done, with date included

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nueva-transferencia (enviarDatos)="transferir($event)"></app-nueva-transferencia>
 
-<p>Valor: <strong>{{ transferencia.valor }}</strong> </p>
-<p>Destino: <strong>{{ transferencia.destino }}</strong> </p>
+<app-estado-cuenta [transferencias]="transferencias"></app-estado-cuenta>
+
+
