set up a fake DB and working, get

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nueva-transferencia (enviarDatos)="transferir($event)"></app-nueva-transferencia>
 
-<app-estado-cuenta [transferencias]="transferencias"></app-estado-cuenta>
+<app-estado-cuenta></app-estado-cuenta>
 
 
