--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-nueva-transferencia (enviarDatos)="transferir($event)"></app-nueva-transferencia>
+<header>
+  <a routerLink="estado">ByteBank</a>
+  <a routerLink="nueva-transferencia" routerLinkActive="activo">Nueva transferencia</a>
+</header>
 
-<app-estado-cuenta></app-estado-cuenta>
-
-
+<router-outlet></router-outlet>
